<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#00BFFF"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/LoginHeading"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#00BFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginUserName" />

    <EditText
        android:id="@+id/edit_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:hint="@string/UsernameHint"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginPassword" />

    <EditText
        android:id="@+id/edit_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:hint="@string/PasswordHint"
        android:inputType="numberPassword"
        android:padding="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#000000" />

    <Button
        android:id="@+id/bt_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Login_Button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword" />

</LinearLayout>